correção de chamada de método